# MLIR

./: .gitignore  CMakeLists.txt  README.md  _build.sh
lib/Conversion/: CMakeLists.txt
lib/Conversion/Poly10xToStandard/: CMakeLists.txt  Poly10xToStandard.cpp  Poly10xToStandard.h  Poly10xToStandard.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Poly10x/: CMakeLists.txt  Poly10x.td  Poly10xDialect.cpp  Poly10xDialect.h  Poly10xDialect.td  Poly10xOps.cpp  Poly10xOps.h  Poly10xOps.td  Poly10xPatterns.td  Poly10xTypes.h  Poly10xTypes.td
lib/Transform/: CMakeLists.txt
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt  Passes.h  Passes.td
lib/Transform/Arith/: MulToAdd.cpp  MulToAdd.h
lib/Transform/Linalg/: CMakeLists.txt  MatmulToMmt4d.cpp  MatmulToMmt4d.h
tests/: CMakeLists.txt  affine_full_unroll.mlir  control_flow_sink.mlir  licm.mlir  lit.cfg.py  matmul_to_mmt4d.mlir  mul_to_add.mlir  poly10x_canonicalize.mlir  poly10x_syntax.mlir  poly10x_to_standard.mlir  poly10x_verifier.mlir  sccp.mlir
tools/: CMakeLists.txt  dummy-opt.cpp
